Update to use tnotifier

--- a/src/template.html
+++ b/src/template.html
@@ -1,4 +1,4 @@
 <div class="status">
-    <ch-icon id="status-icon" type="casthub"></ch-icon>
+    <ch-icon id="status-icon" type="tnotifier"></ch-icon>
 </div>
 <span class="source-name" id="label">No Source Selected</p>
