Update to staged props

--- a/src/template.html
+++ b/src/template.html
@@ -1,4 +1,4 @@
 <div class="status">
-    <ch-icon id="status-icon" type="tnotifier"></ch-icon>
+    <ch-icon id="status-icon" type="obs"></ch-icon>
 </div>
-<span class="source-name" id="label">No Source Selected</p>
+<span class="source-name" id="label">No Source Selected.</p>
